@startuml

title \n

  package  {
    interface IDataLayer {
        {abstract} + AddUser()
        {abstract} + EditUsers()
        {abstract} + DeleteUsers()
        {abstract} + GetUser()
        {abstract} + AddBus()
        {abstract} + EditBus()
        {abstract} + DeleteBus()
        {abstract} + GetBus()
        {abstract} + GetDriver()
        {abstract} + AddJob()
        {abstract} + GetJob()
        {abstract} + DeleteJob()
        {abstract} + EditJob()
    }
  }
  

  package  {
    class RestClient {
        - key : String
        - base : String
        + sendGeo()
        + WaypointRequest()
        - Request()
    }
  }
  

  package  {
    class RoutingServer {
        + getClasses()
    }
  }
  

  package  {
    class ServerLogic {
        ~ isLoggedIn : boolean
        ~ conJsonArray : JSONArray
        ~ result : boolean
        ~ result1 : String
        ~ routes : ArrayList<String>
        + ServerLogic()
        + AddUser()
        + GetUser()
        + EditUsers()
        + DeleteUsers()
        + GetBus()
        + AllDrivers()
        + GetDriver()
        + AddBus()
        + EditBus()
        + DeleteBus()
        + AddJob()
        + AllJobs()
        + GetJob()
        + DeleteJob()
        + EditJob()

    }
  }
  

  RoutingServer -up-|> Application
  ServerLogic -up-|> IDataLayer
  ServerLogic -up-|> Serializable
  ServerLogic -up-|> Remote
  ServerLogic o-- IDataLayer : stub


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
